--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-tagsinput": "^1.4.3",
     "react-tap-event-plugin": "^0.1.3",
     "reactabular": "^0.7.0",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "sha1": "~1.1.1"
   }
 }
